load("@rules_java//java:defs.bzl", "java_library")
load("@rules_java//java:java_binary.bzl", "java_binary")
load("//tools/build_rules:java_model_generation.bzl", "java_model_generation")

java_binary(
    name = "JavaModelFactoryGeneratorTDS",
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaModelFactoryGenerator",
    visibility = ["//visibility:private"],
    runtime_deps = [
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-grammar",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
    ],
)

java_model_generation(
    name = "java_gen",
    srcs = ["//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure:pure_gen"],
    factory_class = "org.finos.legend.pure.m2.inlinedsl.tds.TDSExtension",
    model_name = "TDS",
    tool = ":JavaModelFactoryGeneratorTDS",
)

java_library(
    name = "legend-pure-runtime-java-extension-compiled-dsl-tds",
    srcs = [":java_gen"] + glob(["src/main/java/**/*.java"]),
    javacopts = [
        "-Xep:IdentityBinaryExpression:OFF",
        "-Xep:IsInstanceIncompatibleType:OFF",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
