load("//tools/build_rules:legend_java_library.bzl", "legend_java_library")

java_binary(
    name = "JavaModelFactoryGeneratorTDS",
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaModelFactoryGenerator",
    visibility = ["//visibility:private"],
    runtime_deps = [
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
    ],
)

java_binary(
    name = "JavaCodeGeneration_TDS",
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaCodeGeneration",
    visibility = ["//visibility:private"],
    runtime_deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

legend_java_library(
    name = "legend-pure-runtime-java-extension-compiled-dsl-tds",
    src_root = "legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-runtime-java-extension-compiled-dsl-tds/src/main/java",
    srcs = [
        "src/main/java/org/finos/legend/pure/runtime/java/extension/dsl/tds/compiled/TDSExtensionCompiled.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/dsl/tds/compiled/TDSNativeImplementation.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/dsl/tds/compiled/natives/StringToTDS.java",
    ],
    model_name = "TDS",
    model_factory_class = "org.finos.legend.pure.m2.inlinedsl.tds.TDSExtension",
    model_srcs = ["//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure:pure_gen"],
    model_generator = ":JavaModelFactoryGeneratorTDS",
    javacopts = [
        "-Xep:IdentityBinaryExpression:OFF",
        "-Xep:IsInstanceIncompatibleType:OFF",
        "-Xep:ComparableType:OFF",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure:pure_platform_dsl_tds_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure:platform_dsl_tds_compiled_graph_import",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
