load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-pure-runtime-java-extension-interpreted-dsl-tds",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-grammar",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-interpreted",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
