load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-pure-runtime-java-extension-interpreted-dsl-tds",
    srcs = [
        "src/main/java/org/finos/legend/pure/runtime/java/extension/dsl/tds/interpreted/TDSExtensionInterpreted.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/dsl/tds/interpreted/natives/StringToTDS.java",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-interpreted",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
