load("@rules_java//java:defs.bzl", "java_library")
load("@rules_java//java:java_test.bzl", "java_test")
load("//legend-pure:grammar.bzl", "antlr_gen")

antlr_gen(
    name = "antlr_gen",
    srcs = glob(["src/main/antlr4/**/*.g4"]) + [
        "//legend-pure/legend-pure-core/legend-pure-m3-core:grammar_files",
        "//legend-pure/legend-pure-core/legend-pure-m4:grammar_files",
    ],
    tool = "//legend-pure:antlr4_tool",
    visibility = ["//visibility:public"],
)

java_library(
    name = "legend-pure-m2-store-relational-grammar",
    srcs = [
        "src/main/java/org/finos/legend/pure/m2/relational/Database.java",
        "src/main/java/org/finos/legend/pure/m2/relational/M2RelationalPaths.java",
        "src/main/java/org/finos/legend/pure/m2/relational/M2RelationalProperties.java",
        "src/main/java/org/finos/legend/pure/m2/relational/TableAlias.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/IRelationalParser.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/RelationalParser.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/antlr/AsciiNodeBuilder.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/antlr/FilterMappingBlockParseResult.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/antlr/LocalMappingPropertyParseResult.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/antlr/RelationalGraphBuilder.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/antlr/ScopeInfo.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/navigation/EmbeddedRelationalInstanceSetImplementationNavigationHandler.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/navigation/FilterMappingNavigationHandler.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/navigation/JoinTreeNodeNavigationHandler.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/navigation/RelationalAssociationImplementationNavigationHandler.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/navigation/RelationalPropertyMappingNavigationHandler.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/navigation/TableAliasColumnNavigationHandler.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/navigation/TableAliasNavigationHandler.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/processor/ColumnDataTypeFactory.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/processor/DatabaseProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/processor/DatabaseSubstitutionHandler.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/processor/MilestoningPropertyMappingProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/processor/RelationalAssociationImplementationProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/processor/RelationalInstanceSetImplementationProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/processor/RelationalMappingSpecificationProcessing.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/processor/RelationalOperationElementProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/processor/RelationalPropertyMappingProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/processor/ViewProcessing.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/DatabaseUnloadUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/DatabaseUnloadWalker.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/FilterMappingUnloadWalker.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/JoinTreeNodeUnloadWalker.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/MilestoningPropertyMappingUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/RelationalAssociationImplementationUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/RelationalInstanceSetImplementationUnloadUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/RelationalMappingSpecificationUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/RelationalOperationElementUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/RelationalPropertyMappingUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/TableAliasColumnUnloadWalker.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/unloader/TableAliasUnloadWalker.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/validator/JoinTreeNodeValidation.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/validator/RelationalAssociationImplementationValidator.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/validator/RelationalInstanceSetImplementationValidator.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/runtime/binary/reference/ColumnReferenceSerializer.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/runtime/binary/reference/FilterReferenceSerializer.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/runtime/binary/reference/JoinReferenceSerializer.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/runtime/binary/reference/TableReferenceSerializer.java",
        "src/main/java/org/finos/legend/pure/m2/relational/serialization/runtime/binary/reference/ViewReferenceSerializer.java",
    ] + [
        ":antlr_gen",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure",
        "@legend_maven//:org_antlr_antlr4_runtime",
        "@legend_maven//:org_apache_commons_commons_lang3",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "grammar-test-utils",
    srcs = [
        "src/test/java/org/finos/legend/pure/m2/relational/AbstractPureRelationalTestWithCoreCompiled.java",
        "src/test/java/org/finos/legend/pure/m2/relational/AbstractTestPureDBFunction.java",
        "src/test/java/org/finos/legend/pure/m2/relational/AbstractTestTempTableLifecycle.java",
        "src/test/java/org/finos/legend/pure/m2/relational/RelationalGraphWalker.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":legend-pure-m2-store-relational-grammar",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-grammar:mapping-grammar-test-utils",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_test(
    name = "all_tests",
    srcs = [
        "src/test/java/org/finos/legend/pure/m2/relational/MilestoningPropertyMappingTestSourceCodes.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestAggregationAwareMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestAssociationMappingValidation.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestCyclicMappingIncludeInMappingHierarchy.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestCyclicStoreSubstitutionInMappingHierarchy.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestDatabaseColumnTypes.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestDatabaseInclude.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestEmbeddedGrammar.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestExtendGrammar.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestInClauseForJoinsAndFilters.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestMainTableForExtendedMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestMappingGrammar.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestMappingInheritanceValidOnlyForClassMappings.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestMilestoningPropertyMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestNameSpaces.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestNavigateForRelationalAndMappingFromCoordinates.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestReferenceUsagesForDatabase.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestRelationAccessor.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestSimpleGrammar.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestStoreSubstitutionValidator.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestSubClassMappingIsNotAutoGenerated.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestViewProcessing.java",
        "src/test/java/org/finos/legend/pure/m2/relational/TestXStoreMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestDatabase.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestIncludedMappingOwnerUnloaderUnbind.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestMappingUnbindWithStoreSubstitution.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestMilestoningPropertyMappingStability.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestPureRuntimeAggregationAwareMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestPureRuntimeAssociationMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestPureRuntimeClassMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestPureRuntimeEnumerationMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestPureRuntimeExtendMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestPureRuntimeInlineEmbeddedMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestPureRuntimeMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestPureRuntimeMappingStoreSubstitution.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestPureRuntimeOtherwiseEmbeddedMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestPureRuntimeXStoreMapping.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestRelationDatabaseAccessor.java",
        "src/test/java/org/finos/legend/pure/m2/relational/incremental/TestView.java",
        "src/test/java/org/finos/legend/pure/m2/relational/serialization/compiler/reference/v1/TestReferenceIdExtensionV1Relational.java",
        "src/test/java/org/finos/legend/pure/m2/relational/serialization/grammar/v1/antlr/RelationalGraphBuilderTest.java",
    ],
    test_class = "org.finos.legend.pure.m2.relational.TestSimpleGrammar",  # Placeholder, Bazel requires test_class for java_test if not inferred from name
    deps = [
        ":grammar-test-utils",
        ":legend-pure-m2-store-relational-grammar",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests:CompiledStateIntegrityTestTools_lib",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure:pure_platform_dsl_mapping_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:pure_platform_dsl_store_par_lib",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure:pure_platform_store_relational_par_lib",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_testutils",
        "@legend_maven//:org_mockito_mockito_core",
    ],
)
